[tool.poetry]
name = "blog.rnstlr.ch"
version = "0.1.0"
description = "The pelican project for my blog"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10.2"
pelican = "^4.7.0"
ghp-import = "^2.0.2"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
